# negine

./: .hgignore  AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE  README.md  font.shader  shader.ps  shader.shader  shader.vs
CMake/: CMakeHelpers.txt
_build/: shader.ps  shader.vs
app/: CMakeLists.txt  demo.cpp  demo.h  glutapp.cpp  glutapp.h  luavm.cpp  luavm.h  main.cpp  sdlapp.cpp  sdlapp.h  sdldemo.cpp  sdldemo.h
base/: CMakeLists.txt  buffer.h  bufferdesc.h  classtypes.h  matrix.h  param.h  plane.cpp  platform.h  stream.h  stringmap.h  timer.cpp  timer.h  types.h  vector.h
base/math/: mathlib.h  matrix.cpp  matrix.h  plane.cpp  plane.h  rect.h  vector.cpp  vector.h
cmake/: FindSDL2.cmake  internal_utils.cmake  project-prebuild.vcxproj.user.in  project.vcxproj.user.in
data/: bump.shader  font.shader  global.shader  hud.shader  main.lua  module.py  q3map.shader  shader.shader  wirebox.shader
renderer/: CMakeLists.txt  fake.txt  glbuffer.cpp  glbuffer.h  glcontext.h  glprogram.cpp  glprogram.h  glshader.cpp  glshader.h  gltexture.cpp  gltexture.h  glvertexbuffer.cpp  glvertexbuffer.h  md3mesh.cpp  md3mesh.h  mesh.cpp  mesh.h  particlesystem.cpp  particlesystem.h  sprite.h  spritefont.cpp  spritefont.h  spritegroup.h  texture.cpp  texture.h  vertexbuffer.cpp  vertexbuffer.h
src/: .astylerc  CMakeLists.txt
src/app/: CMakeLists.txt  app.h  demo.cpp  demo.h  glutapp.cpp  luavm.cpp  luavm.h  main.cpp  sdlapp.cpp  sdlapp.h  sdldemo.cpp  sdldemo.h
src/app/glut/: CMakeLists.txt  glutapp.cpp  glutapp.h
src/app/sdl/: CMakeLists.txt  main.cpp  sdlapp.cpp  sdlapp.h
src/base/: any.cpp  any.h  classtypes.h  debug.h  env.cpp  env.h  fixedmap.h  lexer.cpp  lexer.h  log.cpp  log.h  parameter.cpp  parameter.h  path.cpp  path.h  platform.h  profiler.cpp  profiler.h  py.cpp  py.h  reflect.cpp  reflect.h  singleton.h  sjson-internal.h  sjson.cpp  sjson.h  smallstring.cpp  smallstring.h  stdext.h  stream.cpp  stream.h  stringmap.h  timer.cpp  timer.h  types.cpp  types.h
src/base/math/: mathlib.h  matrix-inl.h  matrix.cpp  matrix.h  plane.cpp  plane.h  quat.cpp  quat.h  rect.h  vector.cpp  vector.h
src/demos/: CMakeLists.txt
src/demos/md5model/: CMakeLists.txt  md3renderer.cpp  md3renderer.h  md5anim.h  md5mesh.cpp  md5mesh.h  md5modeldemo.cpp  md5renderer.cpp  md5renderer.h
src/demos/particles/: CMakeLists.txt  particlesdemo.cpp  particlesystem.cpp  particlesystem.h  particlesystemrenderer.cpp
src/demos/q3map/: CMakeLists.txt  q3map.cpp  q3map.h  q3mapdemo.cpp
src/demos/scene/: CMakeLists.txt  scenedemo.cpp
src/engine/: engine.cpp  engine.h  meshbuilder.cpp  meshbuilder.h  model_loader.cpp  model_loader.h  resource.cpp  resource.h  resourceref.cpp  resourceref.h  texture_loader.cpp  texture_loader.h
src/game/: animationcomponent.h  cameracomponent.cpp  cameracomponent.h  component.cpp  component.h  componentbase.cpp  componentbase.h  componentfactory.cpp  componentfactory.h  components.cpp  components.h  componenttypes.h  entity.cpp  entity.h  gameobject.cpp  gameobject.h  meshcomponent.cpp  meshcomponent.h  scene.cpp  scene.h  transformcomponent.cpp  transformcomponent.h
src/game/components/: camera.cpp  camera.h  renderable.cpp  renderable.h  transform.cpp  transform.h
src/math/: mathlib.h  matrix-inl.h  matrix.cpp  matrix.h  plane.cpp  plane.h  py_math.cpp  py_math.h  quat.cpp  quat.h  rect.h  vec2.h  vec3.h  vec4.h  vector-inl.h  vector.cpp  vector.h
src/physics/: physics.cpp  physics.h
src/render/: bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  cubemesh.cpp  cubemesh.h  framebuffer.cpp  framebuffer.h  gl_lite.h  glbuffer.cpp  glbuffer.h  glcontext.cpp  glcontext.h  glprogram.cpp  glprogram.h  glshader.cpp  glshader.h  gltexture.cpp  gltexture.h  gpuprogram.cpp  gpuprogram.h  gpuresource.cpp  gpuresource.h  material.cpp  material.h  md3mesh.cpp  md3mesh.h  md3renderer.cpp  md3renderer.h  md5anim.cpp  md5anim.h  md5mesh.cpp  md5mesh.h  md5renderer.cpp  md5renderer.h  mesh.cpp  mesh.h  meshbuilder.cpp  meshbuilder.h  model.cpp  (+22 more)
src/renderer/: camera.cpp  camera.h  cubemesh.cpp  cubemesh.h  glbuffer.cpp  glbuffer.h  glcontext.cpp  glcontext.h  glprogram.cpp  glprogram.h  glshader.cpp  glshader.h  gltexture.cpp  gltexture.h  md3mesh.cpp  md3mesh.h  md3renderer.cpp  md3renderer.h  md5anim.cpp  md5anim.h  md5mesh.cpp  md5mesh.h  md5renderer.cpp  md5renderer.h  mesh.cpp  mesh.h  particlesystem.cpp  particlesystem.h  particlesystemrenderer.cpp  particlesystemrenderer.h  q3map.cpp  q3map.h  spritefont.cpp  spritefont.h  statistics.cpp  statistics.h  vertexbuffer.cpp  vertexbuffer.h  wirebox.cpp  wirebox.h
src/runtime/: CMakeLists.txt  demo.cpp  demo.h  main.cpp  pyruntime.cpp
src/tests/: CMakeLists.txt  main.cpp  reflection.cpp  test_any.cpp  test_frustum.cpp  test_lexer.cpp  test_matrix.cpp  test_md3.cpp  test_md5.cpp  test_q3map.cpp  test_quat.cpp  test_rect.cpp  test_sjson.cpp  test_stringmap.cpp  test_vector.cpp
tests/: CMakeLists.txt  first.cpp  main.cpp  test_boost.cpp  test_matrix.cpp  test_md3.cpp  test_rect.cpp  test_stringmap.cpp  test_vector.cpp
